<resources>
    <string name="app_name">CurrencyListDemo</string>
    <string name="clear_db_txt">Clear Local Database</string>
    <string name="insert_db_txt">Insert Data Into Database</string>
    <string name="crypto_list_text">Show Crypto List</string>
    <string name="fiat_list_text">Show Fiat List</string>
    <string name="can_purchased_list_text">Currency Can be Purchased</string>
    <string name="search_text">Search</string>
    <string name="no_data_text">No Data</string>
    <string name="no_result_text">No Results</string>
    <string name="try_mco_text">Try \"MCO\" </string>
    <string name="chevron_right">chevron_right</string>
</resources>
