<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="@dimen/dp0"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/clear_db_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:text="@string/clear_db_txt"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/insert_db_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginHorizontal="@dimen/dp16"
            android:text="@string/insert_db_txt"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/crypto_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginHorizontal="@dimen/dp16"
            android:text="@string/crypto_list_text"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/fiat_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginHorizontal="@dimen/dp16"
            android:text="@string/fiat_list_text"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/purchase_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/can_purchased_list_text"
            android:layout_marginHorizontal="@dimen/dp16"
            android:textAllCaps="false"/>

    </LinearLayout>

    <!-- Fragment container -->
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        app:layout_constraintTop_toBottomOf="@id/button_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white_alt"
        />

</androidx.constraintlayout.widget.ConstraintLayout>